<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HarvestCropActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_productivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/productivity"
        app:helperText="@string/enter_productivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/table_productivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_productivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="@string/crop" />

            <TextView
                android:id="@+id/txt_crop"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="@string/estimated_productivity" />

            <TextView
                android:id="@+id/txt_estimatedProductivity"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="@string/market_rate" />

            <TextView
                android:id="@+id/txt_marketRate"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_proceedProductivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/proceed"
        app:layout_constraintEnd_toEndOf="@+id/table_productivity"
        app:layout_constraintStart_toStartOf="@+id/table_productivity"
        app:layout_constraintTop_toBottomOf="@+id/table_productivity" />
</androidx.constraintlayout.widget.ConstraintLayout>