<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome Amogh Bhagwat" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

    <Button
        android:id="@+id/btn_farmData"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/view_farm_data"
        app:layout_constraintEnd_toEndOf="@+id/btn_logout"
        app:layout_constraintStart_toStartOf="@+id/btn_logout"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

    <Button
        android:id="@+id/btn_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_notifications"
        app:layout_constraintEnd_toEndOf="@+id/btn_farmData"
        app:layout_constraintStart_toStartOf="@+id/btn_farmData"
        app:layout_constraintTop_toBottomOf="@+id/btn_farmData" />

    <Button
        android:id="@+id/btn_operateMotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/operate_motor"
        app:layout_constraintEnd_toEndOf="@+id/btn_notifications"
        app:layout_constraintStart_toStartOf="@+id/btn_notifications"
        app:layout_constraintTop_toBottomOf="@+id/btn_notifications" />

    <Button
        android:id="@+id/btn_harvestCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/harvest_new_crop"
        app:layout_constraintEnd_toEndOf="@+id/btn_operateMotor"
        app:layout_constraintStart_toStartOf="@+id/btn_operateMotor"
        app:layout_constraintTop_toBottomOf="@+id/btn_operateMotor" />

    <Button
        android:id="@+id/btn_historicalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_historical_data"
        app:layout_constraintEnd_toEndOf="@+id/btn_harvestCrop"
        app:layout_constraintStart_toStartOf="@+id/btn_harvestCrop"
        app:layout_constraintTop_toBottomOf="@+id/btn_harvestCrop" />

</androidx.constraintlayout.widget.ConstraintLayout>